--- a/introductorywebpage.html
+++ b/introductorywebpage.html
@@ -4,9 +4,7 @@
     <title> Meagan Wilkins </title>
   </head>
 
-  body {
-    background-color: lightblue;
-  }
+body {background-color: lightblue;}
 
   <body>
     <h1 style="text-align:center"> My name is Meagan Wilkins! </h1>
