--- a/introductorywebpage.html
+++ b/introductorywebpage.html
@@ -4,9 +4,7 @@
     <title> Meagan Wilkins </title>
   </head>
 
-body {background-color: lightblue;}
-
-  <body>
+  <body style=background-color: lightblue>
     <h1 style="text-align:center"> My name is Meagan Wilkins! </h1>
     <h2> Here is some information about me you probably never wanted to know. </h2>
 
