--- a/introductorywebpage.html
+++ b/introductorywebpage.html
@@ -3,8 +3,12 @@
   <head>
     <title> Meagan Wilkins </title>
   </head>
-
-  <body style=background-color: lightblue>
+<style>
+body {
+  background-color: lightblue;
+}
+</style>
+<body>
     <h1 style="text-align:center"> My name is Meagan Wilkins! </h1>
     <h2> Here is some information about me you probably never wanted to know. </h2>
 
